feat(auth): ST-139 change my e-mail through a link
